[gd_scene load_steps=12 format=3 uid="uid://v52tv8iv7k02"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_kunne"]
[ext_resource type="Script" path="res://components/enemy/EnemyRotationComponent.gd" id="2_rkdnn"]
[ext_resource type="PackedScene" uid="uid://cer5vmnxvec7p" path="res://scenes/effects/explosion.tscn" id="2_vs1e6"]
[ext_resource type="Script" path="res://components/enemy/BehaviorComponent.gd" id="3_einfi"]
[ext_resource type="Script" path="res://components/composed/ShootAtPlayer.gd" id="4_6k8w1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_upgu3"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k3gfy"]
radius = 0.52282
height = 2.00842

[sub_resource type="SphereShape3D" id="SphereShape3D_y0u6d"]
radius = 14.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ta1uo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qt5iv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_s58tg"]
radius = 12.89

[node name="Static" type="CharacterBody3D"]
script = ExtResource("1_kunne")

[node name="Explosion" parent="." node_paths=PackedStringArray("exploding_object") instance=ExtResource("2_vs1e6")]
exploding_object = NodePath("..")

[node name="CeilingCheck" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="CeilingCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("SphereShape3D_upgu3")

[node name="WalkCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00886, 0)
shape = SubResource("CapsuleShape3D_k3gfy")

[node name="PlayerDetectionArea" type="Area3D" parent="."]

[node name="PlayerCollision" type="CollisionShape3D" parent="PlayerDetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50092, 0)
shape = SubResource("SphereShape3D_y0u6d")

[node name="Meshes" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00846, 0)
mesh = SubResource("CapsuleMesh_ta1uo")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Meshes"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 1.44555, -0.427416)
mesh = SubResource("CapsuleMesh_qt5iv")

[node name="ShootAtPlayer" type="Area3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1)
collision_layer = 0
script = ExtResource("4_6k8w1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Meshes/ShootAtPlayer"]
shape = SubResource("SphereShape3D_s58tg")

[node name="Components" type="Node3D" parent="."]

[node name="EnemyRotationComponent" type="Node" parent="Components" node_paths=PackedStringArray("rotation_body")]
script = ExtResource("2_rkdnn")
rotation_body = NodePath("../../Meshes")

[node name="BehaviorComponent" type="Node" parent="Components" node_paths=PackedStringArray("rotation_component", "player_detection_area", "enemy")]
script = ExtResource("3_einfi")
rotation_component = NodePath("../EnemyRotationComponent")
player_detection_area = NodePath("../../PlayerDetectionArea")
enemy = NodePath("../..")
